--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ ga_domain: hayerabbit.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "多年以后,奥雷连诺上校站在行刑队面前,准会想起父亲带他去参观冰块的那个遥远的下午"
-sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/haye.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
