--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Haye Blog
-SEOTitle: *你掉进了兔子洞
+SEOTitle: 你掉进了兔子洞
 header-img: img/home-bg.jpg
 email: 857529511@qq.com
 description: "All the grass on the other side,is it only greener in my mind?"
