--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ friends: [
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: "乱序",
+        title: "wukurua",
         href: "http://mida.re/"
     }
 ]
