--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,6 @@ friends: [
     #     href: "http://su.gallery/"
     # },{
         title: "wukurua",
-        href: "http://mida.re/"
+        href: "https://wukurua.github.io/"
     }
 ]
